[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[commitizen]
changelog_file = "CHANGELOG.md"
tag_format = "v$major.$minor.$patch$prerelease"
update_changelog_on_bump = true
version = "0.0.0"
version_files = ["setup.cfg:version", "src/__init__.py:__version__"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.coverage.run]
source = ["src"]
omit = []