[metadata]
name = python lib
version =  0.0.0
license = BSD 2-Clause
licence_file = LICENSE
description = the skeleton of a python lib with everything I like
long_description = file:README.rst
long_description_content_type = text/x-rst
author = Pierrick Rambaud
author_email = pierrick.rambaud49@gmail.com
url = https://github.com/12rambau/python_skeleton
download_url = https://github.com/12rambau/sepal_ui/archive/v${metadata:version}.tar.gz
keywords = 
    skeleton
    Python
classifiers = 
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Topic :: Software Development :: Build Tools
    License :: OSI Approved :: BSD-2-Clause 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
python_requires = >=3.6.9
packages = find:
include_package_data = True
install_requires = 
    Deprecated

[options.packages.find]
where = src
cmdclass = 
    develop = build.DevelopCmd


[options.extras_require]
dev = 
    pre-commit
    commitizen
test = 
    coverage[toml]
    pytest
doc = 
    Sphinx
    sphinxcontrib-spelling
    sphinx-copybutton

[flake8]
# E501: line too long | Black take care of it
# W503: line break before binary operator | Black take care of it
# W605: invalid escape sequence | we escape specific characters for sphinx
ignore = E501, W605, W503

# init file are here to hide the internal structure to the user of the lib
exclude = */__init__.py, docs/source/conf.py